--- a/roles/common/templates/sudoers.d-user.j2
+++ b/roles/common/templates/sudoers.d-user.j2
@@ -1,5 +1,5 @@
 # {{ ansible_managed }}
 
 {% for user in users %}
-{{ user }} ALL=(ALL) NOPASSWD:ALL
+{{ user.name }} ALL=(ALL) NOPASSWD:ALL
 {% endfor %}
